--- a/.github/ISSUE_TEMPLATE/frontend_report.yml
+++ b/.github/ISSUE_TEMPLATE/frontend_report.yml
@@ -1,5 +1,5 @@
 name: "🌐 Website Issue Report"
-description: Report an issue, an optimization request or an documentation issue specifically related to the website frontend.
+description: Report an issue, an optimization request or an documentation issue specifically related to the website.
 labels: "website"
 
 body:
@@ -8,7 +8,7 @@ body:
       value: |
         **IMPORTANT:** Failure to comply with the following guidelines may result in immediate closure.
         - Prior to submitting, kindly search the closed issues to check if the problem you are reporting has already been addressed and resolved. If you come across a closed issue that pertains to your problem, please leave a comment on that issue instead of creating a new one.
-        - If the problem is related to a bug in the website frontend, kindly check for browser compatibility and ensure the issue occurs in multiple browsers before submitting.
+        - If the problem is related to a bug in the website, kindly check for browser compatibility and ensure the issue occurs in multiple browsers before submitting.
         - For suggestions, questions, or feature requests, please use the [Discussions section.](https://github.com/community-scripts/ProxmoxVE/discussions)
   
   - type: input
