Add "Other" to Frontend-Report

--- a/.github/ISSUE_TEMPLATE/frontend_report.yml
+++ b/.github/ISSUE_TEMPLATE/frontend_report.yml
@@ -30,6 +30,7 @@ body:
         - Bug
         - Optimization
         - Documentation
+        - Other
   
   - type: textarea
     id: bug_description
