--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -5,44 +5,60 @@ body:
   - type: markdown
     attributes:
       value: |
-        **IMPORTANT:** Failure to comply with the following guidelines may result in immediate closure.
-        - Prior to submitting, kindly search the closed issues to check if the problem you are reporting has already been addressed and resolved. If you come across a closed issue that pertains to your problem, please leave a comment on that issue instead of creating a new one.
-        - If the default Linux distribution is not adhered to, script support will be discontinued.
-        - When encountering the error message `[ERROR] in line 23: exit code *: while executing command "$@" > /dev/null 2>&1`, make sure to run the script in verbose mode to accurately determine the underlying issue.
-        - For suggestions, questions, or feature/script requests, please use the [Discussions section.](https://github.com/community-scripts/ProxmoxVE/discussions)
+        **IMPORTANT:** Please follow these guidelines:
+        - Before submitting, search closed issues to see if the problem has already been addressed. If a related issue exists, comment on it rather than opening a new one.
+        - Support is limited to the default Linux distributions. Custom environments or modifications may not be supported.
+        - If you encounter `[ERROR] in line 23: exit code *: while executing command "$@" > /dev/null 2>&1`, rerun the script with verbose mode (`-v`) before submitting the issue.
+        - Use the [Discussions section](https://github.com/community-scripts/ProxmoxVE/discussions) for questions, feature requests, or suggestions.
 
   - type: input
     id: guidelines
     attributes:
-      label: Please verify that you have read and understood the guidelines.
+      label: Have you read and understood the above guidelines?
       placeholder: "yes"
     validations:
       required: true
 
-  - type: textarea
-    id: bug
+  - type: input
+    id: script_name
     attributes:
-      label: A clear and concise description of the issue.
+      label: What is the name of the script you are using?
+      placeholder: "e.g., install.sh"
     validations:
       required: true
-      
+
+  - type: input
+    id: script_command
+    attributes:
+      label: What was the exact command used to execute the script?
+      placeholder: "e.g., sudo bash install.sh -v"
+    validations:
+      required: true
+
+  - type: textarea
+    id: issue_description
+    attributes:
+      label: Provide a clear and concise description of the issue.
+    validations:
+      required: true
+
   - type: checkboxes
     validations:
       required: true
     attributes:
-      label: What settings are you currently utilizing?
+      label: What settings are you using?
       options:
         - label: Default Settings
         - label: Advanced Settings
 
   - type: markdown
     attributes:
-      value: "If using Advanced Settings, please try Default Settings before creating an issue."
+      value: "If using Advanced Settings, please test with Default Settings before submitting an issue."
 
   - type: dropdown
-    id: distribution
+    id: linux_distribution
     attributes:
-      label: Which Linux distribution are you employing?
+      label: Which Linux distribution are you using?
       options:
         - 
         - Alpine
@@ -55,17 +71,25 @@ body:
       required: true
 
   - type: textarea
-    id: screenshot
+    id: steps_to_reproduce
     attributes:
-      label: If relevant, including screenshots or a code block can be helpful in clarifying the issue.
-      placeholder: "Code blocks begin and conclude by enclosing the code with three backticks (```) above and below it."
+      label: Steps to reproduce the issue.
+      placeholder: "e.g., Step 1: ..., Step 2: ..."
     validations:
-      required: false
+      required: true
 
   - type: textarea
-    id: reproduce
+    id: error_output
     attributes:
-      label: Please provide detailed steps to reproduce the issue.
-      placeholder: "First do this, then this ..."
+      label: Paste the full error output (if available).
+      placeholder: "Include any relevant logs or error messages."
+    validations:
+      required: true
+
+  - type: textarea
+    id: additional_context
+    attributes:
+      label: Additional context, including screenshots or code blocks (if applicable).
+      placeholder: "Code blocks should use triple backticks (```)."
     validations:
       required: false
