--- a/.github/workflows/check-lowercase.yml
+++ b/.github/workflows/check-lowercase.yml
@@ -41,7 +41,7 @@ jobs:
           done
 
           if [ "$ERROR_COUNT" -ne 0 ]; then
-              echo "$ERROR_COUNT script(s) in ct directory have invalid filenames."
+              #echo "$ERROR_COUNT script(s) in ct directory have invalid filenames."
               exit 1
           else
               echo "All filenames in ct directory passed the lowercase check."
@@ -66,7 +66,7 @@ jobs:
           done
 
           if [ "$ERROR_COUNT" -ne 0 ]; then
-              echo "$ERROR_COUNT script(s) in install directory have invalid filenames."
+              #echo "$ERROR_COUNT script(s) in install directory have invalid filenames."
               exit 1
           else
               echo "All filenames in install directory passed the lowercase check."
@@ -91,7 +91,7 @@ jobs:
           done
 
           if [ "$ERROR_COUNT" -ne 0 ]; then
-              echo "$ERROR_COUNT script(s) in json directory have invalid filenames."
+              #echo "$ERROR_COUNT script(s) in json directory have invalid filenames."
               exit 1
           else
               echo "All filenames in json directory passed the lowercase check."
