--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -18,15 +18,21 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Get changed files
-      id: changes
-      run: |
-        if ${{ github.event_name == 'pull_request' }}; then
-          echo "files=$(git diff --name-only -r HEAD^1 HEAD | xargs)" >> $GITHUB_OUTPUT
-        else
-          echo "files=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | xargs)" >> $GITHUB_OUTPUT
-        fi
+      id: changed-files
+      uses: tj-actions/changed-files@v45
+
+    #- name: Get changed files
+    #  id: changed-files
+    #  run: |
+    #    if ${{ github.event_name == 'pull_request_target' }}; then
+    #      echo "files=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ steps.pr.outputs.result && fromJSON(steps.pr.outputs.result).merge_commit_sha }} | xargs)" >> $GITHUB_OUTPUT
+    #    else
+    #      echo "files=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | xargs)" >> $GITHUB_OUTPUT
+    #    fi
 
     - name: Run ShellCheck
-      if: steps.changes.outputs.files != ''
+      if: steps.changed-files-specific.outputs.any_changed == 'true'
+      env:
+        ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
       run: |
-        echo "${{ steps.changes.outputs.files }}" | xargs shellcheck
+        echo "${ALL_CHANGED_FILES}" | xargs shellcheck
