--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -17,25 +17,34 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Get changed files
-      id: changed-files
-      uses: tj-actions/changed-files@v45
-      with:
-        files: |
-          **.sh
-
     #- name: Get changed files
     #  id: changed-files
-    #  run: |
-    #    if ${{ github.event_name == 'pull_request' }}; then
-    #      echo "files=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ steps.pr.outputs.result && fromJSON(steps.pr.outputs.result).merge_commit_sha }} | xargs)" >> $GITHUB_OUTPUT
-    #    else
-    #      echo "files=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | xargs)" >> $GITHUB_OUTPUT
-    #    fi
+    #  uses: tj-actions/changed-files@v45
+    #  with:
+    #    files: |
+    #      **.sh
+
+    - name: Get changed files
+      id: changed-files
+      run: |
+        if ${{ github.event_name == 'pull_request' }}; then
+          CHANGED_GIT_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ steps.pr.outputs.result && fromJSON(steps.pr.outputs.result).merge_commit_sha }} | xargs)"
+        else
+          CHANGED_GIT_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | xargs)"
+        fi
+        # Filter only for *.sh files
+        echo "files=$(printf "%s\n" ${{ steps.changed-files.outputs.files }} | { grep -E '^.*\.sh$' || true; }) >> $GITHUB_OUTPUT
 
     - name: Run ShellCheck
-      if: steps.changed-files-specific.outputs.any_changed == 'true'
+      if: steps.changed-files.outputs.files != ''
       env:
-        ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
+        ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.files }}
       run: |
         echo "${ALL_CHANGED_FILES}" | xargs shellcheck
+
+    #- name: Run ShellCheck
+    #  if: steps.changed-files-specific.outputs.any_changed == 'true'
+    #  env:
+    #    ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
+    #  run: |
+    #    echo "${ALL_CHANGED_FILES}" | xargs shellcheck
