--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -28,9 +28,9 @@ jobs:
       id: changed-files
       run: |
         if ${{ github.event_name == 'pull_request' }}; then
-          CHANGED_GIT_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ steps.pr.outputs.result && fromJSON(steps.pr.outputs.result).merge_commit_sha }} | xargs)
+          CHANGED_GIT_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ steps.pr.outputs.result && fromJSON(steps.pr.outputs.result).merge_commit_sha }})
         else
-          CHANGED_GIT_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | xargs)
+          CHANGED_GIT_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }})
         fi
 
         # Filter only for *.sh files
