--- a/json/projectsend.json
+++ b/json/projectsend.json
@@ -32,7 +32,7 @@
     },
     "notes": [
       {
-        "text": "After running the update script, logging in as a system user in ProjectSend is necessary to update the database.",
+        "text": "After running the update script, logging in as a system user in ProjectSend is necessary to upgrade the database.",
         "type": "info"
       }
     ]
